# PolishMagTextRecog

./: .gitignore  Makefile  README.md  build_app.py  pyproject.toml  requirements.txt
src/text_recog/: interactive_transcriber.py  layout.py  segment.py
